--- a/800x800.html
+++ b/800x800.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/AsiaceraInternational/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 
 <head>
 	<meta charset="utf-8">
 	<meta name="theme-color" content="#253b2f">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Asiacera-International description contents">
-	<title>Asiacera-International</title>
+	<meta name="description" content="AsiaceraInternational description contents">
+	<title>AsiaceraInternational</title>
 	<link rel="shortcut icon" type="images/png" href="assets/images/fav-icon/favicon.png">
 
 	<!-- Google fonts -->
@@ -52,7 +52,7 @@
 		</div>
 
 		<!--Header Section ======================-->
-		<header class="section-header header-1 Asiacera-International-nav sticky-navbar header-bg-1">
+		<header class="section-header header-1 AsiaceraInternational-nav sticky-navbar header-bg-1">
 			<div class="d-none d-xl-block">
 				<div class="container-fluid max-width">
 					<!-- top-bar -->
@@ -64,15 +64,15 @@
 				<div class="container-fluid max-width">
 		
 					<div class="d-flex align-items-end">
-						<a class="navbar-brand py-0" href="index">
+						<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 							<span class="logo">
 								<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 							</span>
 						</a>
 					</div>
 					<a href="javascript:void(0)" class="toggler-icon text-decoration-none d-block d-xl-none"
-						data-bs-toggle="offcanvas" data-bs-target="#Asiacera-InternationalNavbar"
-						aria-controls="Asiacera-InternationalNavbar" aria-label="Toggle navigation">
+						data-bs-toggle="offcanvas" data-bs-target="#AsiaceraInternationalNavbar"
+						aria-controls="AsiaceraInternationalNavbar" aria-label="Toggle navigation">
 						<svg width="40" height="23" viewBox="0 0 40 23" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<line x1="1.5" y1="1.5" x2="38.5" y2="1.5" stroke="#253B2F" stroke-width="3"
 								stroke-linecap="round" />
@@ -84,9 +84,9 @@
 					</a>
 		
 					<div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1"
-						id="Asiacera-InternationalNavbar" aria-labelledby="Asiacera-InternationalNavbarLabel">
+						id="AsiaceraInternationalNavbar" aria-labelledby="AsiaceraInternationalNavbarLabel">
 						<div class="offcanvas-header">
-							<span class="offcanvas-title" id="Asiacera-InternationalNavbarLabel">
+							<span class="offcanvas-title" id="AsiaceraInternationalNavbarLabel">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -97,7 +97,7 @@
 							<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 		
 								<li class="nav-item">
-									<a class="nav-link" href="index">
+									<a class="nav-link" href="https://asiacerainternational.com/">
 										Home
 									</a>
 								</li>
@@ -376,7 +376,7 @@
 					<div
 						class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 						<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
-						<div class="Asiacera-International-button">
+						<div class="AsiaceraInternational-button">
 							<a href="contact" class="btn btn-secondary gap-10">
 								Lets Talk
 								<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none"
@@ -403,7 +403,7 @@
 					<div class="row gy-5 gy-lg-0  justify-content-between">
 						<div class="col-lg-3">
 							<div>
-								<a class="navbar-brand py-0" href="index">
+								<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -412,7 +412,7 @@
 								<ul class="contact-lists list-unstyled mb-0 d-flex">
 		
 									<a target="_blank"
-										href="https://www.facebook.com/people/Asiacera-International/61561267567617/?mibextid=ZbWKwL"><svg
+										href="https://www.facebook.com/people/AsiaceraInternational/61561267567617/?mibextid=ZbWKwL"><svg
 											xmlns="http://www.w3.org/2000/svg" style="width: 20px;" viewBox="0 0 512 512">
 											<path
 												d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
@@ -576,6 +576,6 @@
 </body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/AsiaceraInternational/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 
 </html>
