--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/contact by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:43 GMT -->
+<!-- Mirrored from themeperch.net/html/AsiaceraInternational/contact by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:43 GMT -->
 
 <head>
 	<meta charset="utf-8">
 	<meta name="theme-color" content="#253b2f">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Asiacera-International description contents">
-	<title>Asiacera-International</title>
+	<meta name="description" content="AsiaceraInternational description contents">
+	<title>AsiaceraInternational</title>
 	<link rel="shortcut icon" type="images/png" href="assets/images/fav-icon/favicon.png">
 
 	<!-- Google fonts -->
@@ -60,7 +60,7 @@
 		</div>
 
 		<!--Header Section ======================-->
-		<header class="section-header header-1 Asiacera-International-nav sticky-navbar header-bg-1">
+		<header class="section-header header-1 AsiaceraInternational-nav sticky-navbar header-bg-1">
 			<div class="d-none d-xl-block">
 				<div class="container-fluid max-width">
 					<!-- top-bar -->
@@ -72,15 +72,15 @@
 				<div class="container-fluid max-width">
 		
 					<div class="d-flex align-items-end">
-						<a class="navbar-brand py-0" href="index">
+						<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 							<span class="logo">
 								<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 							</span>
 						</a>
 					</div>
 					<a href="javascript:void(0)" class="toggler-icon text-decoration-none d-block d-xl-none"
-						data-bs-toggle="offcanvas" data-bs-target="#Asiacera-InternationalNavbar"
-						aria-controls="Asiacera-InternationalNavbar" aria-label="Toggle navigation">
+						data-bs-toggle="offcanvas" data-bs-target="#AsiaceraInternationalNavbar"
+						aria-controls="AsiaceraInternationalNavbar" aria-label="Toggle navigation">
 						<svg width="40" height="23" viewBox="0 0 40 23" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<line x1="1.5" y1="1.5" x2="38.5" y2="1.5" stroke="#253B2F" stroke-width="3"
 								stroke-linecap="round" />
@@ -92,9 +92,9 @@
 					</a>
 		
 					<div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1"
-						id="Asiacera-InternationalNavbar" aria-labelledby="Asiacera-InternationalNavbarLabel">
+						id="AsiaceraInternationalNavbar" aria-labelledby="AsiaceraInternationalNavbarLabel">
 						<div class="offcanvas-header">
-							<span class="offcanvas-title" id="Asiacera-InternationalNavbarLabel">
+							<span class="offcanvas-title" id="AsiaceraInternationalNavbarLabel">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -105,7 +105,7 @@
 							<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 		
 								<li class="nav-item">
-									<a class="nav-link" href="index">
+									<a class="nav-link" href="https://asiacerainternational.com/">
 										Home
 									</a>
 								</li>
@@ -225,7 +225,7 @@
 												class="text-decoration-none link-hover-animation-1">info@asiacerainternational.com</a>
 										</p>
 										<div class="mt-30">
-											<a href="#" id="btnUSA" data-title="Asiacera-International USA"
+											<a href="#" id="btnUSA" data-title="AsiaceraInternational USA"
 												class="link-hover-animation-1 d-inline-flex align-items-center gap-10 text-decoration-none separator btn-map-direction">
 												View on Map
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none"
@@ -335,7 +335,7 @@
 					<div
 						class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 						<h2 class="fw-extra-bold feedback-title">Request a Call</h2>
-						<div class="Asiacera-International-button">
+						<div class="AsiaceraInternational-button">
 							<a href="contact" class="btn btn-secondary gap-10">
 								Call Request
 								<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none"
@@ -364,7 +364,7 @@
 					<div class="row gy-5 gy-lg-0  justify-content-between">
 						<div class="col-lg-3">
 							<div>
-								<a class="navbar-brand py-0" href="index">
+								<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -373,7 +373,7 @@
 								<ul class="contact-lists list-unstyled mb-0 d-flex">
 								
 									<a target="_blank"
-										href="https://www.facebook.com/people/Asiacera-International/61561267567617/?mibextid=ZbWKwL"><svg
+										href="https://www.facebook.com/people/AsiaceraInternational/61561267567617/?mibextid=ZbWKwL"><svg
 											xmlns="http://www.w3.org/2000/svg" style="width: 20px;"
 											viewBox="0 0 512 512">
 											<path
@@ -556,6 +556,6 @@
 </body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/contact by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:44 GMT -->
+<!-- Mirrored from themeperch.net/html/AsiaceraInternational/contact by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:44 GMT -->
 
 </html>
