--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
         <meta name="theme-color"  content="#253b2f">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Asiacera-International description contents">
-		<title>Asiacera-International</title>
+		<meta name="description" content="AsiaceraInternational description contents">
+		<title>AsiaceraInternational</title>
 		<link rel="shortcut icon" type="images/png" href="assets/images/fav-icon/favicon.png">
 
 		<!-- Google fonts -->
@@ -54,7 +54,7 @@
 			</div>		
 
 			<!--Header Section ======================-->
-			<header class="section-header header-1 Asiacera-International-nav sticky-navbar header-bg-1">
+			<header class="section-header header-1 AsiaceraInternational-nav sticky-navbar header-bg-1">
 				<div class="d-none d-xl-block">
 					<div class="container-fluid max-width">
 						<!-- top-bar -->
@@ -66,15 +66,15 @@
 					<div class="container-fluid max-width">
 			
 						<div class="d-flex align-items-end">
-							<a class="navbar-brand py-0" href="index">
+							<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
 							</a>
 						</div>
 						<a href="javascript:void(0)" class="toggler-icon text-decoration-none d-block d-xl-none"
-							data-bs-toggle="offcanvas" data-bs-target="#Asiacera-InternationalNavbar"
-							aria-controls="Asiacera-InternationalNavbar" aria-label="Toggle navigation">
+							data-bs-toggle="offcanvas" data-bs-target="#AsiaceraInternationalNavbar"
+							aria-controls="AsiaceraInternationalNavbar" aria-label="Toggle navigation">
 							<svg width="40" height="23" viewBox="0 0 40 23" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<line x1="1.5" y1="1.5" x2="38.5" y2="1.5" stroke="#253B2F" stroke-width="3"
 									stroke-linecap="round" />
@@ -86,9 +86,9 @@
 						</a>
 			
 						<div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1"
-							id="Asiacera-InternationalNavbar" aria-labelledby="Asiacera-InternationalNavbarLabel">
+							id="AsiaceraInternationalNavbar" aria-labelledby="AsiaceraInternationalNavbarLabel">
 							<div class="offcanvas-header">
-								<span class="offcanvas-title" id="Asiacera-InternationalNavbarLabel">
+								<span class="offcanvas-title" id="AsiaceraInternationalNavbarLabel">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -99,7 +99,7 @@
 								<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 			
 									<li class="nav-item">
-										<a class="nav-link" href="index">
+										<a class="nav-link" href="https://asiacerainternational.com/">
 											Home
 										</a>
 									</li>
@@ -483,7 +483,7 @@
 								<h2 class="fw-extra-bold heading-title separator lh-1">Tiles Showcase</h2>
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Explore our stunning collection of ceramic tiles, beautifully displayed in various settings.</p>	
-									<div class="Asiacera-International-button">
+									<div class="AsiaceraInternational-button">
 										<a href="#projectSlider" class="btn btn-outline-primary  gap-10">View All Projects 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -609,7 +609,7 @@
 								<h2 class="fw-extra-bold heading-title separator lh-1">Custom Tiles Design Services</h2>
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Unlock endless possibilities for your space with our Custom Tile Design Services.</p>	
-									<div class="Asiacera-International-button">
+									<div class="AsiaceraInternational-button">
 										<!-- <a href="contact" class="btn btn-outline-primary  gap-10">View All Services 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -746,7 +746,7 @@
 								<h2 class="fw-extra-bold heading-title separator lh-1">Timeless Artistry in Every Tiles</h2>
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Experience the beauty of timeless artistry with every tile we create.</p>	
-									<div class="Asiacera-International-button">
+									<div class="AsiaceraInternational-button">
 										<a href="slab-tiles" class="btn btn-outline-primary  gap-10">Our Product  							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -1002,7 +1002,7 @@
 										</li>									
 									</ul>
 										
-									<div class="Asiacera-International-button">
+									<div class="AsiaceraInternational-button">
 										<a href="about-us" class="btn btn-outline-secondary  d-inline-flex gap-10 align-items-center">Process of Our Work<span>
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -1050,7 +1050,7 @@
 								<h2 class="fw-extra-bold heading-title separator lh-1">Elegant Tiles Creations</h2>
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Discover the artistry and craftsmanship behind our Elegant Tile Creations.</p>	
-									<div class="Asiacera-International-button">
+									<div class="AsiaceraInternational-button">
 										<!-- <a href="contact" class="btn btn-outline-primary  gap-10">All Our Work 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -1091,7 +1091,7 @@
 										<span class="fs-5 fw-bold">Installation Area:</span>
 										<span>Shower walls, floors, and backsplash</span>
 									</li>
-									<!-- <li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="AsiaceraInternational-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
 									</li> -->
 								</ul>
@@ -1099,7 +1099,7 @@
 									<h5 class="project-title fw-extra-bold">Luxurious Bathroom</h5>
 									<p class="mb-0">Turn your bathroom into a relaxing sanctuary with sleek, water-resistant tiles... <a class="text-decoration-none fw-extra-bold" href="#">see more</a></p>
 
-									<div class="Asiacera-International-button d-block d-xl-none mt-4">
+									<div class="AsiaceraInternational-button d-block d-xl-none mt-4">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Products</a>
 									</div>
 								</div>
@@ -1132,7 +1132,7 @@
 										<span class="fs-5 fw-bold">Project type:</span>
 										<span>Furnishings</span>
 									</li> -->
-									<!-- <li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="AsiaceraInternational-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
 									</li> -->
 								</ul>
@@ -1140,7 +1140,7 @@
 									<h5 class="project-title fw-extra-bold">Kitchen Makeover</h5>
 									<p class="mb-0">Add vibrancy to your kitchen with bold colors and unique patterns... <a class="text-decoration-none fw-extra-bold" href="contact">see more</a></p>
 
-									<!-- <div class="Asiacera-International-button d-block d-xl-none mt-4">
+									<!-- <div class="AsiaceraInternational-button d-block d-xl-none mt-4">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
 									</div> -->
 								</div>
@@ -1173,7 +1173,7 @@
 										<span class="fs-5 fw-bold">Project type:</span>
 										<span>Interior design</span>
 									</li> -->
-									<!-- <li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="AsiaceraInternational-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
 									</li> -->
 								</ul>
@@ -1181,7 +1181,7 @@
 									<h5 class="project-title fw-extra-bold">Living Room Elegance</h5>
 									<p class="mb-0">Create a modern, cozy living room with earthy tones and sleek tiles ... <a class="text-decoration-none fw-extra-bold" href="contact">see more</a></p>
 
-									<!-- <div class="Asiacera-International-button d-block d-xl-none mt-4">
+									<!-- <div class="AsiaceraInternational-button d-block d-xl-none mt-4">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
 									</div> -->
 								</div>
@@ -1317,7 +1317,7 @@
 							<h2 class="fw-extra-bold heading-title separator lh-1">Find Your Perfect Tiles Match</h2>
 							<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 								<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Our ceramic tiles are crafted to transform any space into a masterpiece.</p>	
-								<div class="Asiacera-International-button">
+								<div class="AsiaceraInternational-button">
 									<a href="600x1200glossy" class="btn btn-outline-primary  gap-10">View Products 							
 										<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
@@ -1597,7 +1597,7 @@
 					<div class="feedback-wrapper position-relative">
 						<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 							<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
-							<div class="Asiacera-International-button">
+							<div class="AsiaceraInternational-button">
 								<a href="contact" class="btn btn-secondary gap-10"> 
 									Lets Talk
 									<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1619,7 +1619,7 @@
 						<div class="row gy-5 gy-lg-0  justify-content-between">
 							<div class="col-lg-3">
 								<div>
-									<a class="navbar-brand py-0" href="index">
+									<a class="navbar-brand py-0" href="https://asiacerainternational.com/">
 										<span class="logo">
 											<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 										</span>
@@ -1628,7 +1628,7 @@
 									<ul class="contact-lists list-unstyled mb-0 d-flex">
 			
 										<a target="_blank"
-											href="https://www.facebook.com/people/Asiacera-International/61561267567617/?mibextid=ZbWKwL"><svg
+											href="https://www.facebook.com/people/AsiaceraInternational/61561267567617/?mibextid=ZbWKwL"><svg
 												xmlns="http://www.w3.org/2000/svg" style="width: 20px;" viewBox="0 0 512 512">
 												<path
 													d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
