--- a/documentation/index.html
+++ b/documentation/index.html
@@ -16,6 +16,7 @@
 		
 		<!-- Main CSS -->		
 		<link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
 <body>  
   
