--- a/800x800Glossy.html
+++ b/800x800Glossy.html
@@ -51,51 +51,61 @@
 			</div>		
 
 			<!--Header Section ======================-->
-			<nav class="navbar">
-				<div class="logo">
-					<img src="assets/images/fav-icon/AS2.png" alt="Asiacera Logo">
+			<header class="section-header header-1 AsiaceraInternational-nav sticky-navbar header-bg-1">
+				<div class="d-none d-xl-block">
+					<div class="container-fluid max-width">
+						<!-- top-bar -->
+					</div>
+					<!-- container-fluid -->
 				</div>
-				<div class="nav-links">
-					<ul>
-						<li><a href="https://asiacerainternational.com/">Home</a></li>
-						<li><a href="about-us">About Us</a></li>
-						<li class="dropdown">
-							<a href="#">Our Products <i class="fas fa-chevron-down"></i></a>
-							<div class="dropdown-content">
-								<div class="dropdown-column">
-									<div class="nested-dropdown">
-										<a href="#">Porcelain Tiles <i class="fas fa-chevron-right"></i></a>
-										<div class="nested-dropdown-content">
-											<div class="nested-column">
-												<a href="600x600">600x600</a>
-												<a href="800x800">800x800</a>
-												<a href="600x1200">600x1200</a>
+			
+				<nav class="navbar">
+					<div class="logo">
+						<img src="assets/images/fav-icon/AS2.png" alt="Asiacera Logo">
+					</div>
+					<div class="nav-links">
+						<ul>
+							<li><a href="https://asiacerainternational.com/">Home</a></li>
+							<li><a href="about-us">About Us</a></li>
+							<li class="dropdown">
+								<a href="#">Our Products <i class="fas fa-chevron-down"></i></a>
+								<div class="dropdown-content">
+									<div class="dropdown-column">
+										<div class="nested-dropdown">
+											<a href="#">Porcelain Tiles <i class="fas fa-chevron-right"></i></a>
+											<div class="nested-dropdown-content">
+												<div class="nested-column">
+													<a href="600x600">600x600</a>
+													<a href="800x800">800x800</a>
+													<a href="600x1200">600x1200</a>
+												</div>
 											</div>
 										</div>
+										<a href="slab-tiles">Slab Tiles</a>
+										<a href="ceramic-raw-material">Ceramic Raw Material</a>
 									</div>
-									<a href="slab-tiles">Slab Tiles</a>
-									<a href="ceramic-raw-material">Ceramic Raw Material</a>
 								</div>
-							</div>
-						</li>
-						<li class="dropdown">
-							<a href="#">Product Details <i class="fas fa-chevron-down"></i></a>
-							<div class="dropdown-content">
-								<div class="dropdown-column">
-									<a href="PackingDetails">Packing Details</a>
-									<a href="technical-specification">Technical Specification</a>
+							</li>
+							<li class="dropdown">
+								<a href="#">Product Details <i class="fas fa-chevron-down"></i></a>
+								<div class="dropdown-content">
+									<div class="dropdown-column">
+										<a href="PackingDetails">Packing Details</a>
+										<a href="technical-specification">Technical Specification</a>
+									</div>
 								</div>
-							</div>
-						</li>
-						<li><a href="export">Export</a></li>
-						<li><a href="catalogue">Catalogue</a></li>
-						<li><a href="contact">Contact</a></li>
-					</ul>
-				</div>
-				<div class="mobile-menu-btn">
-					<i class="fas fa-bars"></i>
-				</div>
-			</nav>
+							</li>
+							<li><a href="export">Export</a></li>
+							<li><a href="catalogue">Catalogue</a></li>
+							<li><a href="contact">Contact</a></li>
+						</ul>
+					</div>
+					<div class="mobile-menu-btn">
+						<i class="fas fa-bars"></i>
+					</div>
+				</nav> 
+			
+			</header>
 			<!--Header Section ======================-->
 
 
